[package]
name = "vec-strings"
version = "0.4.7"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Store any string efficiently in an immutable way."
repository = "https://github.com/NobodyXu/vec-strings"

keywords = ["string", "utilities"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", optional = true }
thin-vec = "0.2.4"
array-init = "2.0.0"

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"
once_cell = "1.8.0"
